Adding the rest of sprint 7 stuff

--- a/main/BitBracket/src/BitBracket/Views/Announcements/_CreateAnnouncementPartial.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Announcements/_CreateAnnouncementPartial.cshtml
@@ -1,4 +1,4 @@
-<form id="createAnnouncementForm" class="ui form" style="padding: 20px; background-color: #93a86d; border-radius: 10px;">
+<form id="createAnnouncementForm" class="ui form">
     <div class="field">
         <label>Title</label>
         <div class="ui action input">
@@ -14,7 +14,7 @@
             <textarea id="description" placeholder="Detailed Description" required></textarea>
             <button type="button" id="recordDescBtn" class="ui icon button"><i class="microphone icon"></i></button>
             <button type="button" id="stopDescBtn" class="ui icon button" disabled><i class="microphone slash icon"></i></button>
-            <button type="button" id="clearDescBtn" class="ui icon button"><i the="undo icon"></i></button>
+            <button type="button" id="clearDescBtn" class="ui icon button"><i class="undo icon"></i></button>
         </div>
     </div>
     <div class="field">
@@ -22,8 +22,8 @@
         <div class="ui action input">
             <input type="text" id="author" placeholder="Your Name" required>
             <button type="button" id="recordAuthorBtn" class="ui icon button"><i class="microphone icon"></i></button>
-            <button type="button" id="stopAuthorBtn" class="ui icon button" disabled><i the="microphone slash icon"></i></button>
-            <button type="button" id="clearAuthorBtn" class="ui icon button"><i the="undo icon"></i></button>
+            <button type="button" id="stopAuthorBtn" class="ui icon button" disabled><i class="microphone slash icon"></i></button>
+            <button type="button" id="clearAuthorBtn" class="ui icon button"><i class="undo icon"></i></button>
         </div>
     </div>
     <div class="field">
