--- a/main/BitBracket/src/BitBracket/Views/Bracket/CreateBracket.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/CreateBracket.cshtml
@@ -58,7 +58,7 @@
                     <button type="button" id="recordBtn" class="ui icon button"><i class="microphone icon"></i></button>
                     <button type="button" id="stopBtn" class="ui icon button" disabled><i class="microphone slash icon"></i></button>
                     <button type="button" id="clearBtn" class="ui icon button"><i class="undo icon"></i></button>
-                    <div asp-validation-for="Names" class="ui pointing red basic label"></div>
+                    @* <div asp-validation-for="Names" class="ui pointing red basic label"></div> *@
                 </div>
                 <div class="field">
                     <label for="Format">Format:</label>
