--- a/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementCreate.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementCreate.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Create Announcements";
+    ViewData["Title"] = "Create a User Announcement";
 }
 <head>
 
@@ -24,7 +24,7 @@
     @Html.Partial("~/Views/Announcements/_UserAnnouncementCreate.cshtml")
 </div>
 
-    <a href="@Url.Action("UserAnnouncementForm", "Home")" class="ui button secondary">Return to Announcement Page</a>
+    @* <a href="@Url.Action("UserAnnouncementForm", "Home")" class="ui button secondary">Return to Announcement Page</a> *@
 </div>
 
 @section Scripts {
