--- a/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
             <div class="ui container">
                 <a class="header item navbar-text" asp-area="" asp-controller="Home" asp-action="Index">BitBracket</a>
                 @* <a class="item navbar-text" asp-area="" asp-controller="Home" asp-action="Announcement">Admin Announcements</a> *@
-                <a class="item navbar-text" asp-area="" asp-controller="Home" asp-action="UserAnnouncementForm">User Announcements</a>
+                <a class="item navbar-text" asp-area="" asp-controller="Home" asp-action="UserAnnouncementForm">Announcements</a>
                 <a class="item navbar-text" asp-area="" asp-controller="Bracket" asp-action="CreateBracket">Create Bracket</a>
                 @if (User.Identity.IsAuthenticated)
                 {
