--- a/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
@@ -1,11 +1,11 @@
 @* Views/Home/Announcement.cshtml *@
 
 @{
-    ViewData["Title"] = "Announcements and Notifications";
+    ViewData["Title"] = "Admin Announcements";
 }
 
 <body class="announcement-background">
-<h1 class="title-styling">Announcements for previous admins</h1>
+<h1 class="title-styling">Admin Announcements</h1>
     <div class="ui container center aligned">
         <div class="announcement-container">
 
@@ -14,6 +14,10 @@
 
             <div class="section-gap"></div>
 
+            <a href="@Url.Action("AnnouncementCreate", "Home")" class="ui button primary">Create an Admin Post</a>
+
+            <div class="section-gap"></div>
+            
             <section>
                 @await Html.PartialAsync("~/Views/Announcements/_AnnouncementsPartial.cshtml")
             </section>
