--- a/main/BitBracket/src/BitBracket/Views/Home/AnnouncementCreate.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/AnnouncementCreate.cshtml
@@ -1,7 +1,7 @@
 @* Views/Home/AnnouncementCreate.cshtml *@
 
 @{
-    ViewData["Title"] = "Create a new Announcement";
+    ViewData["Title"] = "Create an Admin Announcement";
 }
 <head>
 
@@ -10,16 +10,16 @@
 <body class="announcement-background">
 <div class="section-gap"></div>
     <div class="ui container">
-        <h2 class="title-styling">@ViewData["Title"]
+        <h1 class="title-styling">Create an Admin Announcement
             
             <button id="myBtn">i</button>
-        </h2>
+        </h1>
 
         <div id="myModal" class="modal">
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <p>Welcome to the admin announcements page, where you can create an announcement as save it as a draft, or publish it right away as an admin announcement!</p>
+                <p>Welcome to the admin announcements page, where you can create an announcement and publish it right away as an admin announcement!</p>
             </div>
         </div>
 
@@ -27,8 +27,7 @@
             @await Html.PartialAsync("~/Views/Announcements/_CreateAnnouncementPartial.cshtml")
         </section>
 
-        <a href="@Url.Action("UserAnnouncementForm", "Home")" class="ui button secondary">Return to Announcement Page</a>
-        <a href="@Url.Action("Announcement", "Home")" class="ui button primary">Previous Admin Announcements!</a>
+        @* <a href="@Url.Action("Announcement", "Home")" class="ui button secondary">Return to Announcement Page</a> *@
     </div>
 </body>
 @section Scripts {
