--- a/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementForm.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementForm.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "My Announcements";
+    ViewData["Title"] = "User Announcements";
 }
 <head>
     <link rel="stylesheet" href="~/css/site.css" />
@@ -25,7 +25,7 @@
 {
     <a href="@Url.Action("UserAnnouncementCreate", "Home")" class="ui button primary">Create User Announcement</a>
 }
-<a href="@Url.Action("AnnouncementCreate", "Home")" class="ui button primary">Create an admin Announcement</a>
+<a href="@Url.Action("Announcement", "Home")" class="ui button primary">Check Admin Announcements</a>
 <a href="@Url.Action("optInConfirmation", "Home")" class="ui button secondary">OptIn/Out</a>
 
 <div class="section-gap"></div>
