--- a/main/BitBracket/src/BitBracket/Views/Bracket/CreateBracket.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/CreateBracket.cshtml
@@ -72,6 +72,9 @@
                         <input type="checkbox" id="RandomSeeding" name="RandomSeeding" value="true" checked="@Model.RandomSeeding" />
                         <label for="RandomSeeding">Random Seeding (Seeding will be done in entered order otherwise)</label>
                     </div>
+                    <div class="d-grid gap-2">
+                        <button type="submit" class="btn btn-primary">Generate Bracket</button>
+                    </div>
                 </form>
          
     </div>
