Adding and Fixing Images and Some other bugs

--- a/main/BitBracket/src/BitBracket/Views/Announcements/_OptInConfirmation.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Announcements/_OptInConfirmation.cshtml
@@ -23,19 +23,19 @@
     }
 </div>
 
-<script src="~/js/optInOut.js"></script>
+<script src="~/js/optInConfirmation.js"></script>
 
 <style>
-    .ui.container {
+    @* .ui.container {
         margin-top: 50px;
-    }
+    } *@
     .ui.segment {
         text-align: center;
     }
-    .ui.header {
+    @* .ui.header {
         margin-bottom: 30px;
-    }
-    .ui.buttons .button {
+    } *@
+    @* .ui.buttons .button {
         width: 120px;
-    }
+    } *@
 </style>
