--- a/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
@@ -135,9 +135,11 @@
             </div>
         </div>
     </div>
+    <div class="section-gap"></div>
     <div>
-        <h2>Created Brackets</h2>
+        <h2 class="white-label">Created Brackets</h2>
     </div>
+    
 
     <!-- Bracket display -->
     <div id="bracketsList"></div>
