--- a/main/BitBracket/src/BitBracket/Views/Announcements/_ManageAnnouncement.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Announcements/_ManageAnnouncement.cshtml
@@ -6,7 +6,7 @@
 
 <div class="ui grid">
     <div class="eight wide column">
-        <h2 class="ui header">Drafts</h2>
+        <h2 class="white-label">Drafts</h2>
         <div id="draftsList" class="ui cards">
             @foreach (var announcement in Model.DraftAnnouncements)
             {
@@ -14,9 +14,10 @@
                     <div class="content">
                         <div class="header">@announcement.Title</div>
                         <div class="description">@announcement.Description</div>
+                        <div class="author">@announcement.Author</div>
                     </div>
                     <div class="extra content">
-                        <button class="ui blue button" onclick="updateAnnouncement(@announcement.Id)">Update</button>
+                        @* <button class="ui blue button" onclick="updateAnnouncement(@announcement.Id)">Update</button> *@
                         <button class="ui primary button" onclick="publishAnnouncement(@announcement.Id)">Publish</button>
                         <button class="ui red button" onclick="deleteAnnouncement(@announcement.Id)">Delete</button>
                     </div>
@@ -25,7 +26,7 @@
         </div>
     </div>
     <div class="eight wide column">
-        <h2 class="ui header">Published</h2>
+        <h2 class="white-label">Published</h2>
         <div id="publishedList" class="ui cards">
             @foreach (var announcement in Model.PublishedAnnouncements)
             {
@@ -33,6 +34,7 @@
                     <div class="content">
                         <div class="header">@announcement.Title</div>
                         <div class="description">@announcement.Description</div>
+                        <div class="author">@announcement.Author</div>
                     </div>
                     <div class="extra content">
                         <button class="ui red button" onclick="deleteAnnouncement(@announcement.Id)">Delete</button>
@@ -43,7 +45,7 @@
     </div>
 </div>
 
-<div class="ui modal" id="updateModal">
+@* <div class="ui modal" id="updateModal">
     <i class="close icon"></i>
     <div class="header">Update Announcement</div>
     <div class="content">
@@ -56,6 +58,10 @@
                 <label>Description</label>
                 <textarea id="announcementDescription" placeholder="Description"></textarea>
             </div>
+            <div class="field">
+                <label>Author</label>
+                <input type="text" id="announcementAuthor" placeholder="Author" readonly> <!-- Added Author field -->
+            </div>
             <input type="hidden" id="announcementId">
         </form>
     </div>
@@ -63,7 +69,8 @@
         <div class="ui button" onclick="$('#updateModal').modal('hide')">Cancel</div>
         <div class="ui button" onclick="saveUpdatedAnnouncement()">Save</div>
     </div>
-</div>
+</div> *@
 
 <script src="~/js/manageAnnouncement.js"></script>
+
 
