--- a/main/BitBracket/src/BitBracket/Views/Bracket/BracketPage.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/BracketPage.cshtml
@@ -1,3 +1,4 @@
+@using BitBracket.ViewModels;
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,6 +23,8 @@
     </style>
 </head>
 <body class="announcement-background">
+    <div id="TournyId" style="visibility: hidden;">@Model.TournamentId</div>
+
     <div class="container-fluid" style="margin-top: 20px;">
         <div id="minimal" class="row">
             <div class="col demo">
