--- a/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
@@ -76,7 +76,7 @@
 
     <a href="@Url.Action("ManageAnnouncement", "Home")" class="ui button secondary">Manage Announcements</a>
     <a href="@Url.Action("TournamentImIn", "Home")" class="ui button secondary">View Registered Tournament</a>
-    <a class="ui button secondary">View Friends</a>
+    <a href="@Url.Action("friendly", "Home")" class="ui button secondary">View Friends</a>
     <a href="@Url.Action("Standings", "Home")" class="ui button secondary">View Standings</a>
 
     <button class="ui button secondary" id="show-blocked-users">Show Blocked Users</button>
