--- a/main/BitBracket/src/BitBracket/Views/Bracket/BracketView.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/BracketView.cshtml
@@ -11,6 +11,9 @@
     }
   </style>
 </head>
+<button class="ui icon button" id="backButton" style="margin-top: 20px;">
+  <i class="arrow left icon"></i>
+</button>
 <body class="announcement-background">
     <div class="container-fluid" style="margin-top: 20px;">
     <div id="minimal" class="row">
