--- a/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
@@ -7,6 +7,9 @@
 @* <link rel="stylesheet" href="~/css/site.css" /> *@
 </head>
 <body class="announcement-background">
+    <button class="ui icon button" id="backButton" style="margin-top: 20px;">
+        <i class="arrow left icon"></i>
+    </button>
     <h1 class="title-styling">
         Tournament Page
         <button id="myBtn">i</button>
