Adds visual changes to Create Bracket & Tournament

--- a/main/BitBracket/src/BitBracket/Views/Bracket/CreateBracket.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/CreateBracket.cshtml
@@ -96,8 +96,10 @@
                 </form>
                  
         </div>
-    </div>
-         
+    </div>    
+</div>
+    <div class="ui icon">
+        <i class="info circle icon large inverted" data-content="Click the Score which should default to 0 or -- and press enter to progress the bracket!" data-position="top center"></i>
     </div>
     
     <div id="minimal" class="row">
