commiting fix for login issue, UI changes to the search bar and fixed the alignment and look allot better

--- a/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
@@ -12,7 +12,9 @@
     <div class="ui container">
         <h1 class="title-styling">
             Welcome, @Model.Username, to your profile page!
-            <button id="myBtn">i</button>
+            <div class="ui icon">
+                <i class="info circle icon large inverted" data-content="Click the Score which should default to 0 or -- and press enter to progress the bracket!" data-position="top center"></i>
+            </div>
         </h1>
         <div id="myModal" class="modal">
             <!-- Modal content -->
